# rotina-simulacaobandas-python

./: .coverage  README.md  pyproject.toml
src/data-raw/: l5_srf.pkl  l7_srf.pkl  l8_srf.pkl  modis_srf.pkl  planet_srf.pkl  s2_srf.pkl  s2b_srf.pkl  s3_srf.pkl
src/rotina_simulacaobandas_python/: main.py
src/rotina_simulacaobandas_python/core/: spectra_simulation.py
src/rotina_simulacaobandas_python/results/: etm_simulation.csv  modis_simulation.csv  msi_s2a_simulation.csv  msi_s2b_simulation.csv  olci_simulation.csv  oli_simulation.csv  superdove_simulation.csv  tm_simulation.csv
src/rotina_simulacaobandas_python/utils/: data_loader.py  data_processor.py  output_handler.py
tests/: conftest.py  test_satellite_band_simulation.py
